# drf-iam-service

./: .dockerignore  .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
api/: README.txt
api/v1/: urls.py
app/: README.txt
app/account/: apps.py  controller.py  models.py  repository.py  serializer.py  signal.py  urls.py  views.py
app/todo/: controller.py  models.py  repository.py  serializer.py  urls.py  views.py
app/user/: controller.py  models.py  repository.py  serializer.py  urls.py  views.py
config/: README.txt  urls.py
config/settings/: base.py  staging.py  testing.py
core/: README.txt  constants.py  log.py  producer.py
core/event/: event_notification_handler.py  event_subscription_handler.py
core/exceptions/: __init__.py  app_exception_handler.py  app_exceptions.py
core/interfaces/: __init__.py
core/models/: base_model.py
core/notifications/: __init__.py  email_notification_handler.py  notify.py  sms_notification_handler.py
core/repository/: __init__.py  sql_base_repository.py
core/serializers/: __init__.py  base_serializer.py
core/services/: __init__.py  keycloak_service.py
core/utils/: __init__.py  auth.py  util.py
kafka_config/: kafka_server_properties.properties  kafkastart.sh
templates/email/: account_deactivation.html  account_otp_code.html  account_password_change.html  account_password_reset.html  account_temporal_password.html  base.html  email_verification.html  new_base.html  (+3 more)
tests/: __init__.py  base_test_case.py  mock_keycloak_auth.py  utils.py
(+33 files in other folders)
