[tool.poetry]
name = "django-repo-structure"
version = "0.1.0"
description = ""
authors = ["Michael Asumadu <masumadu@archsolutions.online>"]
readme = "README.md"
packages = [{include = "django_repo_structure"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "5.1"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.27.2"
django-environ = "^0.11.2"
pinject = "^0.14.1"
psycopg2-binary = "^2.9.9"
coverage = "^7.5.4"
pre-commit = "^3.7.1"
python-keycloak = "^4.3.0"
loguru = "^0.7.2"
kafka-python = "^2.0.2"
django-redis = "^5.4.0"
django-fakeredis = "^0.1.2"
pyjwt = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
